--- a/config/database.yml
+++ b/config/database.yml
@@ -19,8 +19,8 @@ development:
   encoding: unicode
   database: impartial_development
   pool: 5
-  username: impartial
-  password:
+  host: localhost
+  port: 5432
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -48,13 +48,16 @@ test:
   encoding: unicode
   database: impartial_test
   pool: 5
-  username: impartial
-  password:
+  host: localhost
+  port: 5432
+
+
 
 production:
   adapter: postgresql
   encoding: unicode
   database: impartial_production
   pool: 5
-  username: impartial
-  password:
+  host: localhost
+  port: 5432
+
